@@ -1,13 +1,10 @@
 package carpet.script;
 
-import carpet.CarpetServer;
-import carpet.CarpetSettings;
-import carpet.api.settings.CarpetRule;
-import carpet.api.settings.RuleHelper;
-import carpet.helpers.TickSpeed;
 import carpet.script.exception.IntegrityException;
 import carpet.script.exception.InternalExpressionException;
 import carpet.script.exception.InvalidCallbackException;
+import carpet.script.external.Carpet;
+import carpet.script.external.Vanilla;
 import carpet.script.utils.GlocalFlag;
 import carpet.script.value.BlockValue;
 import carpet.script.value.BooleanValue;
@@ -19,12 +16,12 @@ import carpet.script.value.NumericValue;
 import carpet.script.value.StringValue;
 import carpet.script.value.Value;
 import carpet.script.value.ValueConversions;
-import carpet.utils.CarpetProfiler;
-import carpet.utils.Messenger;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -39,15 +36,21 @@ import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.Registry;
+import net.minecraft.core.RegistryAccess;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.stats.Stat;
+import net.minecraft.stats.StatType;
 import net.minecraft.stats.Stats;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.damagesource.DamageSource;
@@ -67,6 +70,8 @@ import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.Vec3;
 
+import javax.annotation.Nullable;
+
 public class CarpetEventServer
 {
     public final List<ScheduledCall> scheduledCalls = new LinkedList<>();
@@ -77,27 +82,31 @@ public class CarpetEventServer
 
     public enum CallbackResult
     {
-        SUCCESS, PASS, FAIL
+        SUCCESS, PASS, FAIL, CANCEL
     }
 
     public static class Callback
     {
         public final String host;
+        @Nullable
         public final String optionalTarget;
         public final FunctionValue function;
         public final List<Value> parametrizedArgs;
+        public final CarpetScriptServer scriptServer;
 
-        public Callback(String host, String target, FunctionValue function, List<Value> parametrizedArgs)
+        public Callback(String host, @Nullable String target, FunctionValue function, List<Value> parametrizedArgs, CarpetScriptServer scriptServer)
         {
             this.host = host;
             this.function = function;
             this.optionalTarget = target;
-            this.parametrizedArgs = parametrizedArgs==null?NOARGS:parametrizedArgs;
+            this.parametrizedArgs = parametrizedArgs == null ? NOARGS : parametrizedArgs;
+            this.scriptServer = scriptServer;
         }
 
         /**
          * Used also in entity events
-         * @param sender - entity command source
+         *
+         * @param sender      - entity command source
          * @param runtimeArgs = options
          */
         public CallbackResult execute(CommandSourceStack sender, List<Value> runtimeArgs)
@@ -107,39 +116,44 @@ public class CarpetEventServer
                 runtimeArgs = new ArrayList<>(runtimeArgs);
                 runtimeArgs.addAll(this.parametrizedArgs);
             }
-            if (CarpetServer.scriptServer == null) return CallbackResult.FAIL; // already stopped
-            return CarpetServer.scriptServer.events.runEventCall(
-                    sender.withPermission(CarpetSettings.runPermissionLevel),
+            if (scriptServer.stopAll)
+            {
+                return CallbackResult.FAIL; // already stopped
+            }
+            return scriptServer.events.runEventCall(
+                    sender.withPermission(Vanilla.MinecraftServer_getRunPermissionLevel(sender.getServer())),
                     host, optionalTarget, function, runtimeArgs);
         }
 
         /**
          * Used also in entity events
-         * @param sender - sender of the signal
-         * @param optionalRecipient - optional target player argument
-         * @param runtimeArgs = options
+         *
+         * @param sender            - sender of the signal
+         * @param recipient - optional target player argument
+         * @param runtimeArgs       = options
          */
-        public CallbackResult signal(CommandSourceStack sender, ServerPlayer optionalRecipient, List<Value> runtimeArgs)
+        public CallbackResult signal(CommandSourceStack sender, @Nullable ServerPlayer recipient, List<Value> runtimeArgs)
         {
             // recipent of the call doesn't match the handlingHost
-            if (optionalRecipient != null && !optionalRecipient.getScoreboardName().equals(optionalTarget))
-                return CallbackResult.FAIL;
-            return execute(sender, runtimeArgs);
+            return recipient != null && !recipient.getScoreboardName().equals(optionalTarget) ? CallbackResult.FAIL : execute(sender, runtimeArgs);
         }
 
 
         @Override
         public String toString()
         {
-            return function.getString()+((host==null)?"":"(from "+host+(optionalTarget == null?"":"/"+optionalTarget)+")");
+            return function.getString() + ((host == null) ? "" : "(from " + host + (optionalTarget == null ? "" : "/" + optionalTarget) + ")");
         }
-        public static record Signature(String function, String host, String target) {}
-        
+
+        public record Signature(String function, String host, String target)
+        {
+        }
+
         public static Signature fromString(String str)
         {
             Pattern find = Pattern.compile("(\\w+)(?:\\(from (\\w+)(?:/(\\w+))?\\))?");
             Matcher matcher = find.matcher(str);
-            if(matcher.matches())
+            if (matcher.matches())
             {
                 return new Signature(matcher.group(1), matcher.group(2), matcher.group(3));
             }
@@ -156,7 +170,7 @@ public class CarpetEventServer
         public ScheduledCall(CarpetContext context, FunctionValue function, List<Value> args, long dueTime)
         {
             // ignoring target as we will be always calling self
-            super(context.host.getName(), null, function, args);
+            super(context.host.getName(), null, function, args, (CarpetScriptServer) context.scriptServer());
             this.ctx = context.duplicate();
             this.dueTime = dueTime;
         }
@@ -166,7 +180,7 @@ public class CarpetEventServer
          */
         public void execute()
         {
-            CarpetServer.scriptServer.events.runScheduledCall(ctx.origin, ctx.s, host, (CarpetScriptHost) ctx.host, function, parametrizedArgs);
+            scriptServer.events.runScheduledCall(ctx.origin(), ctx.source(), host, (CarpetScriptHost) ctx.host, function, parametrizedArgs);
         }
     }
 
@@ -208,61 +222,93 @@ public class CarpetEventServer
             for (int i = 0; i < callList.size(); i++)
             {
                 Callback call = callList.get(i);
-                if (when.test(call)) removedCalls.add(call);
+                if (when.test(call))
+                {
+                    removedCalls.add(call);
+                }
             }
         }
 
         /**
          * Handles only built-in events from the events system
+         *
          * @param argumentSupplier
          * @param cmdSourceSupplier
+         * @return Whether this event call has been cancelled
          */
-        public void call(Supplier<List<Value>> argumentSupplier, Supplier<CommandSourceStack> cmdSourceSupplier)
+        public boolean call(Supplier<List<Value>> argumentSupplier, Supplier<CommandSourceStack> cmdSourceSupplier)
         {
-            if (callList.size() > 0 && CarpetServer.scriptServer != null)
+            if (callList.isEmpty())
             {
-                CarpetServer.scriptServer.events.handleEvents.runIfEnabled( () -> {
-                    CarpetProfiler.ProfilerToken currentSection = CarpetProfiler.start_section(null, "Scarpet events", CarpetProfiler.TYPE.GENERAL);
-                    List<Value> argv = argumentSupplier.get(); // empty for onTickDone
-                    CommandSourceStack source;
-                    try
+                return false;
+            }
+            CommandSourceStack source;
+            try
+            {
+                source = cmdSourceSupplier.get();
+            }
+            catch (NullPointerException noReference) // todo figure out what happens when closing.
+            {
+                return false;
+            }
+            CarpetScriptServer scriptServer = Vanilla.MinecraftServer_getScriptServer(source.getServer());
+            if (scriptServer.stopAll)
+            {
+                return false;
+            }
+            Boolean isCancelled = scriptServer.events.handleEvents.runIfEnabled(() -> {
+                Runnable profilerToken = Carpet.startProfilerSection("Scarpet events");
+                List<Value> argv = argumentSupplier.get(); // empty for onTickDone
+                String nameCheck = perPlayerDistribution ? source.getTextName() : null;
+                assert argv.size() == reqArgs;
+                boolean cancelled = false;
+                try
+                {
+                    // we are ok with list growing in the meantime
+                    // which might happen during inCall or inSignal
+                    inCall = true;
+                    for (int i = 0; i < callList.size(); i++)
                     {
-                        source = cmdSourceSupplier.get();
-                    }
-                    catch (NullPointerException noReference) // todo figure out what happens when closing.
-                    {
-                        return;
-                    }
-                    String nameCheck = perPlayerDistribution ? source.getTextName() : null;
-                    assert argv.size() == reqArgs;
-                    try
-                    {
-                        // we are ok with list growing in the meantime
-                        // which might happen during inCall or inSignal
-                        inCall = true;
-                        for (int i = 0; i < callList.size(); i++)
+                        Callback call = callList.get(i);
+                        // supressing calls where target player hosts simply don't match
+                        // handling global hosts with player targets is left to when the host is resolved (few calls deeper).
+                        if (nameCheck != null && call.optionalTarget != null && !nameCheck.equals(call.optionalTarget))
                         {
-                            Callback call = callList.get(i);
-                            // supressing calls where target player hosts simply don't match
-                            // handling global hosts with player targets is left to when the host is resolved (few calls deeper).
-                            if (nameCheck != null && call.optionalTarget != null && !nameCheck.equals(call.optionalTarget)) continue;
-                            if (call.execute(source, argv) == CallbackResult.FAIL) removedCalls.add(call);
+                            continue;
+                        }
+                        CallbackResult result = call.execute(source, argv);
+                        if (result == CallbackResult.CANCEL)
+                        {
+                            cancelled = true;
+                            break;
+                        }
+                        if (result == CallbackResult.FAIL)
+                        {
+                            removedCalls.add(call);
                         }
                     }
-                    finally
-                    {
-                        inCall = false;
-                    }
-                    for (Callback call : removedCalls) callList.remove(call);
-                    removedCalls.clear();
-                    CarpetProfiler.end_current_section(currentSection);
-                });
-            }
+                }
+                finally
+                {
+                    inCall = false;
+                }
+                for (Callback call : removedCalls)
+                {
+                    callList.remove(call);
+                }
+                removedCalls.clear();
+                profilerToken.run();
+                return cancelled;
+            });
+            return isCancelled != null && isCancelled;
         }
 
-        public int signal(CommandSourceStack sender, ServerPlayer optinoalReceipient, List<Value> callArg)
+        public int signal(CommandSourceStack sender, @Nullable ServerPlayer recipient, List<Value> callArg)
         {
-            if (callList.isEmpty()) return 0;
+            if (callList.isEmpty())
+            {
+                return 0;
+            }
             int successes = 0;
             try
             {
@@ -270,7 +316,10 @@ public class CarpetEventServer
                 for (int i = 0; i < callList.size(); i++)
                 {
                     // skipping tracking of fails, its explicit call
-                    if (callList.get(i).signal(sender, optinoalReceipient, callArg) == CallbackResult.SUCCESS) successes++;
+                    if (callList.get(i).signal(sender, recipient, callArg) == CallbackResult.SUCCESS)
+                    {
+                        successes++;
+                    }
                 }
             }
             finally
@@ -280,13 +329,13 @@ public class CarpetEventServer
             return successes;
         }
 
-        public boolean addFromExternal(CommandSourceStack source, String hostName, String funName, Consumer<ScriptHost> hostOnEventHandler)
+        public boolean addFromExternal(CommandSourceStack source, String hostName, String funName, Consumer<ScriptHost> hostOnEventHandler, CarpetScriptServer scriptServer)
         {
-            ScriptHost host = CarpetServer.scriptServer.getAppHostByName(hostName);
+            ScriptHost host = scriptServer.getAppHostByName(hostName);
             if (host == null)
             {
                 // impossible call to add
-                Messenger.m(source, "r Unknown app "+hostName);
+                Carpet.Messenger_message(source, "r Unknown app " + hostName);
                 return false;
             }
             hostOnEventHandler.accept(host);
@@ -294,7 +343,7 @@ public class CarpetEventServer
             if (udf == null || udf.getArguments().size() != reqArgs)
             {
                 // call won't match arguments
-                Messenger.m(source, "r Callback doesn't expect required number of arguments: "+reqArgs);
+                Carpet.Messenger_message(source, "r Callback doesn't expect required number of arguments: " + reqArgs);
                 return false;
             }
             String target = null;
@@ -306,7 +355,7 @@ public class CarpetEventServer
                 }
                 catch (CommandSyntaxException e)
                 {
-                    Messenger.m(source, "r Cannot add event to a player scoped app from a command without a player context");
+                    Carpet.Messenger_message(source, "r Cannot add event to a player scoped app from a command without a player context");
                     return false;
                 }
             }
@@ -314,9 +363,10 @@ public class CarpetEventServer
             //remove duplicates
 
             removeEventCall(hostName, target, udf.getString());
-            callList.add(new Callback(hostName, target, udf, null));
+            callList.add(new Callback(hostName, target, udf, null, scriptServer));
             return true;
         }
+
         public boolean addEventCallInternal(ScriptHost host, FunctionValue function, List<Value> args)
         {
             if (function == null || (function.getArguments().size() - args.size()) != reqArgs)
@@ -325,13 +375,13 @@ public class CarpetEventServer
             }
             //removing duplicates
             removeEventCall(host.getName(), host.user, function.getString());
-            callList.add(new Callback(host.getName(), host.user, function, args));
+            callList.add(new Callback(host.getName(), host.user, function, args, (CarpetScriptServer) host.scriptServer()));
             return true;
         }
 
         public void removeEventCall(String hostName, String target, String funName)
         {
-            removeCallsIf((c)->  c.function.getString().equals(funName)
+            removeCallsIf((c) -> c.function.getString().equals(funName)
                     && (Objects.equals(c.host, hostName))
                     && (Objects.equals(c.optionalTarget, target))
             );
@@ -339,19 +389,19 @@ public class CarpetEventServer
 
         public void removeAllCalls(CarpetScriptHost host)
         {
-            removeCallsIf((c)-> (Objects.equals(c.host, host.getName()))
+            removeCallsIf((c) -> (Objects.equals(c.host, host.getName()))
                     && (Objects.equals(c.optionalTarget, host.user)));
         }
 
         public void createChildEvents(CarpetScriptHost host)
         {
             List<Callback> copyCalls = new ArrayList<>();
-            callList.forEach((c)->
+            callList.forEach((c) ->
             {
-                if ((Objects.equals(c.host, host.getName()))
-                    && c.optionalTarget == null)
+                if ((Objects.equals(c.host, host.getName())) // TODO fix me
+                        && c.optionalTarget == null)
                 {
-                    copyCalls.add(new Callback(c.host, host.user, c.function, c.parametrizedArgs));
+                    copyCalls.add(new Callback(c.host, host.user, c.function, c.parametrizedArgs, host.scriptServer()));
                 }
             });
             callList.addAll(copyCalls);
@@ -360,54 +410,62 @@ public class CarpetEventServer
         public void clearEverything()
         {
             // when some moron puts /reload in an event call.
-            if (inSignal || inCall) callList = new ArrayList<>();
+            if (inSignal || inCall)
+            {
+                callList = new ArrayList<>();
+            }
             callList.clear();
+        }
+
+        public void sortByPriority(CarpetScriptServer scriptServer)
+        {
+            callList.sort(Comparator.comparingDouble(c -> -scriptServer.getAppHostByName(c.host).eventPriority));
         }
     }
 
     public static class Event
     {
         public static final Map<String, Event> byName = new HashMap<>();
+
         public static List<Event> publicEvents(CarpetScriptServer server)
         {
             List<Event> events = byName.values().stream().filter(e -> e.isPublic).collect(Collectors.toList());
-            if (server != null) events.addAll(server.events.customEvents.values());
+            if (server != null)
+            {
+                events.addAll(server.events.customEvents.values());
+            }
             return events;
+        }
+
+        static
+        {
+            Carpet.initCarpetEvents();
         }
 
         public static final Event START = new Event("server_starts", 0, true)
         {
             @Override
-            public void onTick()
+            public void onTick(MinecraftServer server)
             {
-                handler.call(Collections::emptyList, () ->
-                        CarpetServer.minecraft_server.createCommandSourceStack().
-                                withLevel(CarpetServer.minecraft_server.getLevel(Level.OVERWORLD))
-                );
+                handler.call(Collections::emptyList, server::createCommandSourceStack);
             }
         };
 
         public static final Event SHUTDOWN = new Event("server_shuts_down", 0, true)
         {
             @Override
-            public void onTick()
+            public void onTick(MinecraftServer server)
             {
-                handler.call(Collections::emptyList, () ->
-                        CarpetServer.minecraft_server.createCommandSourceStack().
-                                withLevel(CarpetServer.minecraft_server.getLevel(Level.OVERWORLD))
-                );
+            handler.call(Collections::emptyList,server::createCommandSourceStack);
             }
         };
 
         public static final Event TICK = new Event("tick", 0, true)
         {
             @Override
-            public void onTick()
+            public void onTick(MinecraftServer server)
             {
-                handler.call(Collections::emptyList, () ->
-                        CarpetServer.minecraft_server.createCommandSourceStack().
-                                withLevel(CarpetServer.minecraft_server.getLevel(Level.OVERWORLD))
-                );
+            handler.call(Collections::emptyList,server::createCommandSourceStack);
             }
         };
         public static final Event NETHER_TICK = new Event("tick_nether", 0, true)
@@ -419,11 +477,11 @@ public class CarpetEventServer
             }
 
             @Override
-            public void onTick()
+            public void onTick(MinecraftServer server)
             {
                 handler.call(Collections::emptyList, () ->
-                        CarpetServer.minecraft_server.createCommandSourceStack().
-                                withLevel(CarpetServer.minecraft_server.getLevel(Level.NETHER))
+                        server.createCommandSourceStack().
+                                withLevel(server.getLevel(Level.NETHER))
                 );
             }
         };
@@ -434,12 +492,13 @@ public class CarpetEventServer
             {
                 return true;
             }
+
             @Override
-            public void onTick()
+            public void onTick(MinecraftServer server)
             {
                 handler.call(Collections::emptyList, () ->
-                        CarpetServer.minecraft_server.createCommandSourceStack().
-                                withLevel(CarpetServer.minecraft_server.getLevel(Level.END))
+                        server.createCommandSourceStack().
+                                withLevel(server.getLevel(Level.END))
                 );
             }
         };
@@ -448,10 +507,9 @@ public class CarpetEventServer
             @Override
             public void onChunkEvent(ServerLevel world, ChunkPos chPos, boolean generated)
             {
-                handler.call( () ->
-                        {
-                            return Arrays.asList(new NumericValue(chPos.x << 4), new NumericValue(chPos.z << 4));
-                        }, () -> CarpetServer.minecraft_server.createCommandSourceStack().withLevel(world)
+                handler.call(
+                        () -> Arrays.asList(new NumericValue(chPos.x << 4), new NumericValue(chPos.z << 4)),
+                        () -> world.getServer().createCommandSourceStack().withLevel(world)
                 );
             }
         };
@@ -460,10 +518,9 @@ public class CarpetEventServer
             @Override
             public void onChunkEvent(ServerLevel world, ChunkPos chPos, boolean generated)
             {
-                handler.call( () ->
-                        {
-                            return Arrays.asList(new NumericValue(chPos.x << 4), new NumericValue(chPos.z << 4));
-                        }, () -> CarpetServer.minecraft_server.createCommandSourceStack().withLevel(world)
+                handler.call(
+                        () -> Arrays.asList(new NumericValue(chPos.x << 4), new NumericValue(chPos.z << 4)),
+                        () -> world.getServer().createCommandSourceStack().withLevel(world)
                 );
             }
         };
@@ -475,7 +532,7 @@ public class CarpetEventServer
             {
                 handler.call(
                         () -> Arrays.asList(new NumericValue(chPos.x << 4), new NumericValue(chPos.z << 4)),
-                        () -> CarpetServer.minecraft_server.createCommandSourceStack().withLevel(world)
+                        () -> world.getServer().createCommandSourceStack().withLevel(world)
                 );
             }
         };
@@ -483,33 +540,37 @@ public class CarpetEventServer
         public static final Event PLAYER_JUMPS = new Event("player_jumps", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_DEPLOYS_ELYTRA = new Event("player_deploys_elytra", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_WAKES_UP = new Event("player_wakes_up", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_ESCAPES_SLEEP = new Event("player_escapes_sleep", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_RIDES = new Event("player_rides", 5, false)
@@ -517,7 +578,7 @@ public class CarpetEventServer
             @Override
             public void onMountControls(ServerPlayer player, float strafeSpeed, float forwardSpeed, boolean jumping, boolean sneaking)
             {
-                handler.call( () -> Arrays.asList(new EntityValue(player),
+                handler.call(() -> Arrays.asList(new EntityValue(player),
                         new NumericValue(forwardSpeed), new NumericValue(strafeSpeed), BooleanValue.of(jumping), BooleanValue.of(sneaking)
                 ), player::createCommandSourceStack);
             }
@@ -525,40 +586,35 @@ public class CarpetEventServer
         public static final Event PLAYER_USES_ITEM = new Event("player_uses_item", 3, false)
         {
             @Override
-            public void onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack)
+            public boolean onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack)
             {
-                handler.call( () ->
-                {
-                    //ItemStack itemstack = player.getStackInHand(enumhand);
-                    return Arrays.asList(
-                            new EntityValue(player),
-                            ValueConversions.of(itemstack),
-                            StringValue.of(enumhand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand")
-                    );
-                }, player::createCommandSourceStack);
+                return handler.call(() ->
+                        Arrays.asList(
+                                new EntityValue(player),
+                                ValueConversions.of(itemstack, player.level().registryAccess()),
+                                StringValue.of(enumhand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand")
+                        ), player::createCommandSourceStack);
             }
         };
         public static final Event PLAYER_CLICKS_BLOCK = new Event("player_clicks_block", 3, false)
         {
             @Override
-            public void onBlockAction(ServerPlayer player, BlockPos blockpos, Direction facing)
+            public boolean onBlockAction(ServerPlayer player, BlockPos blockpos, Direction facing)
             {
-                handler.call( () ->
-                {
-                    return Arrays.asList(
-                            new EntityValue(player),
-                            new BlockValue(null, player.getLevel(), blockpos),
-                            StringValue.of(facing.getName())
-                    );
-                }, player::createCommandSourceStack);
+                return handler.call(() ->
+                        Arrays.asList(
+                                new EntityValue(player),
+                                new BlockValue(null, player.serverLevel(), blockpos),
+                                StringValue.of(facing.getName())
+                        ), player::createCommandSourceStack);
             }
         };
         public static final Event PLAYER_RIGHT_CLICKS_BLOCK = new Event("player_right_clicks_block", 6, false)
         {
             @Override
-            public void onBlockHit(ServerPlayer player, InteractionHand enumhand, BlockHitResult hitRes)//ItemStack itemstack, Hand enumhand, BlockPos blockpos, Direction enumfacing, Vec3d vec3d)
+            public boolean onBlockHit(ServerPlayer player, InteractionHand enumhand, BlockHitResult hitRes)
             {
-                handler.call( () ->
+                return handler.call(() ->
                 {
                     ItemStack itemstack = player.getItemInHand(enumhand);
                     BlockPos blockpos = hitRes.getBlockPos();
@@ -566,9 +622,9 @@ public class CarpetEventServer
                     Vec3 vec3d = hitRes.getLocation().subtract(blockpos.getX(), blockpos.getY(), blockpos.getZ());
                     return Arrays.asList(
                             new EntityValue(player),
-                            ValueConversions.of(itemstack),
+                            ValueConversions.of(itemstack, player.level().registryAccess()),
                             StringValue.of(enumhand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand"),
-                            new BlockValue(null, player.getLevel(), blockpos),
+                            new BlockValue(null, player.serverLevel(), blockpos),
                             StringValue.of(enumfacing.getName()),
                             ListValue.of(
                                     new NumericValue(vec3d.x),
@@ -582,9 +638,9 @@ public class CarpetEventServer
         public static final Event PLAYER_INTERACTS_WITH_BLOCK = new Event("player_interacts_with_block", 5, false)
         {
             @Override
-            public void onBlockHit(ServerPlayer player, InteractionHand enumhand, BlockHitResult hitRes)
+            public boolean onBlockHit(ServerPlayer player, InteractionHand enumhand, BlockHitResult hitRes)
             {
-                handler.call( () ->
+                handler.call(() ->
                 {
                     BlockPos blockpos = hitRes.getBlockPos();
                     Direction enumfacing = hitRes.getDirection();
@@ -592,7 +648,7 @@ public class CarpetEventServer
                     return Arrays.asList(
                             new EntityValue(player),
                             StringValue.of(enumhand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand"),
-                            new BlockValue(null, player.getLevel(), blockpos),
+                            new BlockValue(null, player.serverLevel(), blockpos),
                             StringValue.of(enumfacing.getName()),
                             ListValue.of(
                                     new NumericValue(vec3d.x),
@@ -601,28 +657,43 @@ public class CarpetEventServer
                             )
                     );
                 }, player::createCommandSourceStack);
+                return false;
+            }
+        };
+        public static final Event PLAYER_PLACING_BLOCK = new Event("player_placing_block", 4, false)
+        {
+            @Override
+            public boolean onBlockPlaced(ServerPlayer player, BlockPos pos, InteractionHand enumhand, ItemStack itemstack)
+            {
+                return handler.call(() -> Arrays.asList(
+                        new EntityValue(player),
+                        ValueConversions.of(itemstack, player.level().registryAccess()),
+                        StringValue.of(enumhand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand"),
+                        new BlockValue(null, player.serverLevel(), pos)
+                ), player::createCommandSourceStack);
             }
         };
         public static final Event PLAYER_PLACES_BLOCK = new Event("player_places_block", 4, false)
         {
             @Override
-            public void onBlockPlaced(ServerPlayer player, BlockPos pos, InteractionHand enumhand, ItemStack itemstack)
+            public boolean onBlockPlaced(ServerPlayer player, BlockPos pos, InteractionHand enumhand, ItemStack itemstack)
             {
-                handler.call( () -> Arrays.asList(
+                handler.call(() -> Arrays.asList(
                         new EntityValue(player),
-                        ValueConversions.of(itemstack),
+                        ValueConversions.of(itemstack, player.level().registryAccess()),
                         StringValue.of(enumhand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand"),
-                        new BlockValue(null, player.getLevel(), pos)
+                        new BlockValue(null, player.serverLevel(), pos)
                 ), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_BREAK_BLOCK = new Event("player_breaks_block", 2, false)
         {
             @Override
-            public void onBlockBroken(ServerPlayer player, BlockPos pos, BlockState previousBS)
+            public boolean onBlockBroken(ServerPlayer player, BlockPos pos, BlockState previousBS)
             {
-                handler.call(
-                        () -> Arrays.asList(new EntityValue(player), new BlockValue(previousBS, player.getLevel(), pos)),
+                return handler.call(
+                        () -> Arrays.asList(new EntityValue(player), new BlockValue(previousBS, player.serverLevel(), pos)),
                         player::createCommandSourceStack
                 );
             }
@@ -630,10 +701,10 @@ public class CarpetEventServer
         public static final Event PLAYER_INTERACTS_WITH_ENTITY = new Event("player_interacts_with_entity", 3, false)
         {
             @Override
-            public void onEntityHandAction(ServerPlayer player, Entity entity, InteractionHand enumhand)
+            public boolean onEntityHandAction(ServerPlayer player, Entity entity, InteractionHand enumhand)
             {
-                handler.call( () -> Arrays.asList(
-                        new EntityValue(player), new EntityValue(entity), StringValue.of(enumhand==InteractionHand.MAIN_HAND?"mainhand":"offhand")
+                return handler.call(() -> Arrays.asList(
+                        new EntityValue(player), new EntityValue(entity), StringValue.of(enumhand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand")
                 ), player::createCommandSourceStack);
             }
         };
@@ -642,88 +713,96 @@ public class CarpetEventServer
             @Override
             public void onTrade(ServerPlayer player, Merchant merchant, MerchantOffer tradeOffer)
             {
-                handler.call( () -> Arrays.asList(
+                RegistryAccess regs = player.level().registryAccess();
+                handler.call(() -> Arrays.asList(
                         new EntityValue(player),
-                        merchant instanceof AbstractVillager ? new EntityValue((AbstractVillager) merchant) : Value.NULL,
-                        ValueConversions.of(tradeOffer.getBaseCostA()),
-                        ValueConversions.of(tradeOffer.getCostB()),
-                        ValueConversions.of(tradeOffer.getResult())
+                        merchant instanceof final AbstractVillager villager ? new EntityValue(villager) : Value.NULL,
+                        ValueConversions.of(tradeOffer.getBaseCostA(), regs),
+                        ValueConversions.of(tradeOffer.getCostB(), regs),
+                        ValueConversions.of(tradeOffer.getResult(), regs)
                 ), player::createCommandSourceStack);
             }
         };
         public static final Event PLAYER_PICKS_UP_ITEM = new Event("player_picks_up_item", 2, false)
         {
             @Override
-            public void onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack) {
-                handler.call( () -> Arrays.asList(new EntityValue(player), ValueConversions.of(itemstack)), player::createCommandSourceStack);
+            public boolean onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack)
+            {
+                handler.call(() -> Arrays.asList(new EntityValue(player), ValueConversions.of(itemstack, player.level().registryAccess())), player::createCommandSourceStack);
+                return false;
             }
         };
 
         public static final Event PLAYER_ATTACKS_ENTITY = new Event("player_attacks_entity", 2, false)
         {
             @Override
-            public void onEntityHandAction(ServerPlayer player, Entity entity, InteractionHand enumhand)
+            public boolean onEntityHandAction(ServerPlayer player, Entity entity, InteractionHand enumhand)
             {
-                handler.call( () -> Arrays.asList(new EntityValue(player), new EntityValue(entity)), player::createCommandSourceStack);
+                return handler.call(() -> Arrays.asList(new EntityValue(player), new EntityValue(entity)), player::createCommandSourceStack);
             }
         };
         public static final Event PLAYER_STARTS_SNEAKING = new Event("player_starts_sneaking", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_STOPS_SNEAKING = new Event("player_stops_sneaking", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_STARTS_SPRINTING = new Event("player_starts_sprinting", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_STOPS_SPRINTING = new Event("player_stops_sprinting", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
 
         public static final Event PLAYER_RELEASED_ITEM = new Event("player_releases_item", 3, false)
         {
             @Override
-            public void onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack)
+            public boolean onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack)
             {
                 // this.getStackInHand(this.getActiveHand()), this.activeItemStack)
-                handler.call( () ->
+                handler.call(() ->
                         Arrays.asList(
                                 new EntityValue(player),
-                                ValueConversions.of(itemstack),
+                                ValueConversions.of(itemstack, player.level().registryAccess()),
                                 StringValue.of(enumhand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand")
                         ), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_FINISHED_USING_ITEM = new Event("player_finishes_using_item", 3, false)
         {
             @Override
-            public void onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack)
+            public boolean onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack)
             {
                 // this.getStackInHand(this.getActiveHand()), this.activeItemStack)
-                handler.call( () ->
+                return handler.call(() ->
                         Arrays.asList(
                                 new EntityValue(player),
-                                ValueConversions.of(itemstack),
+                                ValueConversions.of(itemstack, player.level().registryAccess()),
                                 new StringValue(enumhand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand")
                         ), player::createCommandSourceStack);
             }
@@ -731,28 +810,28 @@ public class CarpetEventServer
         public static final Event PLAYER_DROPS_ITEM = new Event("player_drops_item", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
             }
         };
         public static final Event PLAYER_DROPS_STACK = new Event("player_drops_stack", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
             }
         };
         public static final Event PLAYER_CHOOSES_RECIPE = new Event("player_chooses_recipe", 3, false)
         {
             @Override
-            public void onRecipeSelected(ServerPlayer player, ResourceLocation recipe, boolean fullStack)
+            public boolean onRecipeSelected(ServerPlayer player, ResourceLocation recipe, boolean fullStack)
             {
-                handler.call( () ->
+                return handler.call(() ->
                         Arrays.asList(
                                 new EntityValue(player),
-                                StringValue.of(NBTSerializableValue.nameFromRegistryId(recipe)),
+                                NBTSerializableValue.nameFromRegistryId(recipe),
                                 BooleanValue.of(fullStack)
                         ), player::createCommandSourceStack);
             }
@@ -762,8 +841,11 @@ public class CarpetEventServer
             @Override
             public void onSlotSwitch(ServerPlayer player, int from, int to)
             {
-                if (from == to) return; // initial slot update
-                handler.call( () ->
+                if (from == to)
+                {
+                    return; // initial slot update
+                }
+                handler.call(() ->
                         Arrays.asList(
                                 new EntityValue(player),
                                 new NumericValue(from),
@@ -774,9 +856,9 @@ public class CarpetEventServer
         public static final Event PLAYER_SWAPS_HANDS = new Event("player_swaps_hands", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
             }
         };
         public static final Event PLAYER_SWINGS_HAND = new Event("player_swings_hand", 2, false)
@@ -784,9 +866,9 @@ public class CarpetEventServer
             @Override
             public void onHandAction(ServerPlayer player, InteractionHand hand)
             {
-                handler.call( () -> Arrays.asList(
-                            new EntityValue(player),
-                            StringValue.of(hand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand")
+                handler.call(() -> Arrays.asList(
+                                new EntityValue(player),
+                                StringValue.of(hand == InteractionHand.MAIN_HAND ? "mainhand" : "offhand")
                         )
                         , player::createCommandSourceStack);
             }
@@ -794,24 +876,24 @@ public class CarpetEventServer
         public static final Event PLAYER_TAKES_DAMAGE = new Event("player_takes_damage", 4, false)
         {
             @Override
-            public void onDamage(Entity target, float amount, DamageSource source)
+            public boolean onDamage(Entity target, float amount, DamageSource source)
             {
-                handler.call( () ->
+                return handler.call(() ->
                         Arrays.asList(
-                                 new EntityValue(target),
-                                 new NumericValue(amount),
-                                 StringValue.of(source.getMsgId()),
-                                 source.getEntity()==null?Value.NULL:new EntityValue(source.getEntity())
+                                new EntityValue(target),
+                                new NumericValue(amount),
+                                StringValue.of(source.getMsgId()),
+                                source.getEntity() == null ? Value.NULL : new EntityValue(source.getEntity())
                         ), target::createCommandSourceStack);
             }
         };
         public static final Event PLAYER_DEALS_DAMAGE = new Event("player_deals_damage", 3, false)
         {
             @Override
-            public void onDamage(Entity target, float amount, DamageSource source)
+            public boolean onDamage(Entity target, float amount, DamageSource source)
             {
-                handler.call( () ->
-                        Arrays.asList(new EntityValue(source.getEntity()), new NumericValue(amount), new EntityValue(target)),
+                return handler.call(() ->
+                                Arrays.asList(new EntityValue(source.getEntity()), new NumericValue(amount), new EntityValue(target)),
                         () -> source.getEntity().createCommandSourceStack()
                 );
             }
@@ -819,25 +901,29 @@ public class CarpetEventServer
         public static final Event PLAYER_COLLIDES_WITH_ENTITY = new Event("player_collides_with_entity", 2, false)
         {
             @Override
-            public void onEntityHandAction(ServerPlayer player, Entity entity, InteractionHand enumhand) {
-                handler.call( () -> Arrays.asList(new EntityValue(player), new EntityValue(entity)), player::createCommandSourceStack);
+            public boolean onEntityHandAction(ServerPlayer player, Entity entity, InteractionHand enumhand)
+            {
+                handler.call(() -> Arrays.asList(new EntityValue(player), new EntityValue(entity)), player::createCommandSourceStack);
+                return false;
             }
         };
 
         public static final Event PLAYER_DIES = new Event("player_dies", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_RESPAWNS = new Event("player_respawns", 1, false)
         {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
         public static final Event PLAYER_CHANGES_DIMENSION = new Event("player_changes_dimension", 5, false)
@@ -847,32 +933,47 @@ public class CarpetEventServer
             {
                 // eligibility already checked in mixin
                 Value fromValue = ListValue.fromTriple(from.x, from.y, from.z);
-                Value toValue = (to == null)?Value.NULL:ListValue.fromTriple(to.x, to.y, to.z);
-                Value fromDimStr = new StringValue(NBTSerializableValue.nameFromRegistryId(fromDim.location()));
-                Value toDimStr = new StringValue(NBTSerializableValue.nameFromRegistryId(dimTo.location()));
+                Value toValue = (to == null) ? Value.NULL : ListValue.fromTriple(to.x, to.y, to.z);
+                Value fromDimStr = NBTSerializableValue.nameFromRegistryId(fromDim.location());
+                Value toDimStr = NBTSerializableValue.nameFromRegistryId(dimTo.location());
 
-                handler.call( () -> Arrays.asList(new EntityValue(player), fromValue, fromDimStr, toValue, toDimStr), player::createCommandSourceStack);
+                handler.call(() -> Arrays.asList(new EntityValue(player), fromValue, fromDimStr, toValue, toDimStr), player::createCommandSourceStack);
             }
         };
-        public static final Event PLAYER_CONNECTS = new Event("player_connects", 1, false) {
+        public static final Event PLAYER_CONNECTS = new Event("player_connects", 1, false)
+        {
             @Override
-            public void onPlayerEvent(ServerPlayer player)
+            public boolean onPlayerEvent(ServerPlayer player)
             {
-                handler.call( () -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                handler.call(() -> Collections.singletonList(new EntityValue(player)), player::createCommandSourceStack);
+                return false;
             }
         };
-        public static final Event PLAYER_DISCONNECTS = new Event("player_disconnects", 2, false) {
+        public static final Event PLAYER_DISCONNECTS = new Event("player_disconnects", 2, false)
+        {
             @Override
-            public void onPlayerMessage(ServerPlayer player, String message)
+            public boolean onPlayerMessage(ServerPlayer player, String message)
             {
-                handler.call( () -> Arrays.asList(new EntityValue(player), new StringValue(message)), player::createCommandSourceStack);
+                handler.call(() -> Arrays.asList(new EntityValue(player), new StringValue(message)), player::createCommandSourceStack);
+                return false;
             }
         };
 
-        public static final Event PLAYER_MESSAGE = new Event("player_message", 2, false) {
+        public static final Event PLAYER_MESSAGE = new Event("player_message", 2, false)
+        {
             @Override
-            public void onPlayerMessage(ServerPlayer player, String message) {
-                handler.call( () -> Arrays.asList(new EntityValue(player), new StringValue(message)), player::createCommandSourceStack);
+            public boolean onPlayerMessage(ServerPlayer player, String message)
+            {
+                return handler.call(() -> Arrays.asList(new EntityValue(player), new StringValue(message)), player::createCommandSourceStack);
+            }
+        };
+
+        public static final Event PLAYER_COMMAND = new Event("player_command", 2, false)
+        {
+            @Override
+            public boolean onPlayerMessage(ServerPlayer player, String message)
+            {
+                return handler.call(() -> Arrays.asList(new EntityValue(player), new StringValue(message)), player::createCommandSourceStack);
             }
         };
 
@@ -882,22 +983,27 @@ public class CarpetEventServer
             {
                 return stat.getType().getRegistry().getKey(stat.getValue());
             }
+
             private final Set<ResourceLocation> skippedStats = Set.of(
-                Stats.TIME_SINCE_DEATH,
-                Stats.TIME_SINCE_REST,
-                //Stats.PLAY_ONE_MINUTE,
-                Stats.PLAY_TIME,
-                Stats.TOTAL_WORLD_TIME
+                    Stats.TIME_SINCE_DEATH,
+                    Stats.TIME_SINCE_REST,
+                    Stats.PLAY_TIME,
+                    Stats.TOTAL_WORLD_TIME
             );
+
             @Override
             public void onPlayerStatistic(ServerPlayer player, Stat<?> stat, int amount)
             {
                 ResourceLocation id = getStatId(stat);
-                if (skippedStats.contains(id)) return;
-                handler.call( () -> Arrays.asList(
+                if (skippedStats.contains(id))
+                {
+                    return;
+                }
+                Registry<StatType<?>> registry = player.level().registryAccess().registryOrThrow(Registries.STAT_TYPE);
+                handler.call(() -> Arrays.asList(
                         new EntityValue(player),
-                        StringValue.of(NBTSerializableValue.nameFromRegistryId(Registry.STAT_TYPE.getKey(stat.getType()))),
-                        StringValue.of(NBTSerializableValue.nameFromRegistryId(id)),
+                        NBTSerializableValue.nameFromRegistryId(registry.getKey(stat.getType())),
+                        NBTSerializableValue.nameFromRegistryId(id),
                         new NumericValue(amount)
                 ), player::createCommandSourceStack);
             }
@@ -910,39 +1016,34 @@ public class CarpetEventServer
                 handler.call(
                         () -> Arrays.asList(
                                 new BlockValue(null, world, pos),
-                                flag>0?Value.TRUE:Value.FALSE
-                        ), () -> CarpetServer.minecraft_server.createCommandSourceStack().withLevel(world)
+                                flag > 0 ? Value.TRUE : Value.FALSE
+                        ), () -> world.getServer().createCommandSourceStack().withLevel(world)
                 );
             }
         };
-        public static final Event CARPET_RULE_CHANGES = new Event("carpet_rule_changes", 2, true)
-        {
-            @Override
-            public void onCarpetRuleChanges(CarpetRule<?> rule, CommandSourceStack source)
-            {
-                String identifier = rule.settingsManager().identifier();
-                final String namespace;
-                if (!identifier.equals("carpet")) 
-                {
-                    namespace = identifier+":";
-                } else { namespace = "";}
-                handler.call(
-                        () -> Arrays.asList(
-                                new StringValue(namespace+rule.name()),
-                                new StringValue(RuleHelper.toRuleString(rule.value()))
-                        ), () -> source
-                );
-            }
-        };
+
         //copy of Explosion.getCausingEntity() #TRACK#
         private static LivingEntity getExplosionCausingEntity(Entity entity)
         {
-            if (entity == null)  return null;
-            else if (entity instanceof PrimedTnt) return ((PrimedTnt)entity).getOwner();
-            else if (entity instanceof LivingEntity) return (LivingEntity)entity;
-            else if (entity instanceof Projectile) {
-                Entity owner = ((Projectile)entity).getOwner();
-                if (owner instanceof LivingEntity) return (LivingEntity)owner;
+            if (entity == null)
+            {
+                return null;
+            }
+            else if (entity instanceof final PrimedTnt tnt)
+            {
+                return tnt.getOwner();
+            }
+            else if (entity instanceof final LivingEntity le)
+            {
+                return le;
+            }
+            else if (entity instanceof final Projectile p)
+            {
+                Entity owner = p.getOwner();
+                if (owner instanceof final LivingEntity le)
+                {
+                    return le;
+                }
             }
             return null;
         }
@@ -950,21 +1051,21 @@ public class CarpetEventServer
         public static final Event EXPLOSION_OUTCOME = new Event("explosion_outcome", 8, true)
         {
             @Override
-            public void onExplosion(ServerLevel world, Entity e,  Supplier<LivingEntity> attacker, double x, double y, double z, float power, boolean createFire, List<BlockPos> affectedBlocks, List<Entity> affectedEntities, Explosion.BlockInteraction type)
+            public void onExplosion(ServerLevel world, Entity e, Supplier<LivingEntity> attacker, double x, double y, double z, float power, boolean createFire, List<BlockPos> affectedBlocks, List<Entity> affectedEntities, Explosion.BlockInteraction type)
             {
                 handler.call(
                         () -> Arrays.asList(
                                 ListValue.fromTriple(x, y, z),
                                 NumericValue.of(power),
                                 EntityValue.of(e),
-                                EntityValue.of(attacker!= null?attacker.get():Event.getExplosionCausingEntity(e)),
+                                EntityValue.of(attacker != null ? attacker.get() : Event.getExplosionCausingEntity(e)),
                                 StringValue.of(type.name().toLowerCase(Locale.ROOT)),
                                 BooleanValue.of(createFire),
-                                new ListValue(affectedBlocks.stream().filter(b -> !world.isEmptyBlock(b)). map( // da heck they send air blocks
-                                        b -> new BlockValue(world.getBlockState(b),world,b)
-                                ).collect(Collectors.toList())),
-                                new ListValue(affectedEntities.stream().map(EntityValue::of).collect(Collectors.toList()))
-                        ), () -> CarpetServer.minecraft_server.createCommandSourceStack().withLevel(world)
+                                ListValue.wrap(affectedBlocks.stream().filter(b -> !world.isEmptyBlock(b)).map( // da heck they send air blocks
+                                        b -> new BlockValue(world.getBlockState(b), world, b)
+                                )),
+                                ListValue.wrap(affectedEntities.stream().map(EntityValue::of))
+                        ), () -> world.getServer().createCommandSourceStack().withLevel(world)
                 );
             }
         };
@@ -980,10 +1081,10 @@ public class CarpetEventServer
                                 ListValue.fromTriple(x, y, z),
                                 NumericValue.of(power),
                                 EntityValue.of(e),
-                                EntityValue.of(attacker!= null?attacker.get():Event.getExplosionCausingEntity(e)),
+                                EntityValue.of(attacker != null ? attacker.get() : Event.getExplosionCausingEntity(e)),
                                 StringValue.of(type.name().toLowerCase(Locale.ROOT)),
                                 BooleanValue.of(createFire)
-                        ), () -> CarpetServer.minecraft_server.createCommandSourceStack().withLevel(world)
+                        ), () -> world.getServer().createCommandSourceStack().withLevel(world)
                 );
             }
         };
@@ -991,11 +1092,11 @@ public class CarpetEventServer
         @Deprecated
         public static String getEntityLoadEventName(EntityType<? extends Entity> et)
         {
-            return "entity_loaded_" + ValueConversions.of(Registry.ENTITY_TYPE.getKey(et)).getString();
+            return "entity_loaded_" + ValueConversions.of(BuiltInRegistries.ENTITY_TYPE.getKey(et)).getString();
         }
 
         @Deprecated
-        public static final Map<EntityType<? extends Entity>, Event> ENTITY_LOAD = Registry.ENTITY_TYPE
+        public static final Map<EntityType<? extends Entity>, Event> ENTITY_LOAD = BuiltInRegistries.ENTITY_TYPE
                 .stream()
                 .map(et -> Map.entry(et, new Event(getEntityLoadEventName(et), 1, true, false)
                 {
@@ -1004,24 +1105,26 @@ public class CarpetEventServer
                     {
                         handler.call(
                                 () -> Collections.singletonList(new EntityValue(entity)),
-                                () -> CarpetServer.minecraft_server.createCommandSourceStack().withLevel((ServerLevel) entity.level).withPermission(CarpetSettings.runPermissionLevel)
+                                () -> entity.getServer().createCommandSourceStack().withLevel((ServerLevel) entity.level()).withPermission(Vanilla.MinecraftServer_getRunPermissionLevel(entity.getServer()))
                         );
                     }
                 })).collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, Map.Entry::getValue));
 
         public static String getEntityHandlerEventName(EntityType<? extends Entity> et)
         {
-            return "entity_handler_" + ValueConversions.of(Registry.ENTITY_TYPE.getKey(et)).getString();
+            return "entity_handler_" + ValueConversions.of(BuiltInRegistries.ENTITY_TYPE.getKey(et)).getString();
         }
 
-        public static final Map<EntityType<? extends Entity>, Event> ENTITY_HANDLER = Registry.ENTITY_TYPE
+        public static final Map<EntityType<? extends Entity>, Event> ENTITY_HANDLER = BuiltInRegistries.ENTITY_TYPE
                 .stream()
-                .map(et -> Map.entry(et, new Event(getEntityHandlerEventName(et), 2, true, false) {
+                .map(et -> Map.entry(et, new Event(getEntityHandlerEventName(et), 2, true, false)
+                {
                     @Override
-                    public void onEntityAction(Entity entity, boolean created) {
+                    public void onEntityAction(Entity entity, boolean created)
+                    {
                         handler.call(
                                 () -> Arrays.asList(new EntityValue(entity), BooleanValue.of(created)),
-                                () -> CarpetServer.minecraft_server.createCommandSourceStack().withLevel((ServerLevel) entity.level).withPermission(CarpetSettings.runPermissionLevel)
+                                () -> entity.getServer().createCommandSourceStack().withLevel((ServerLevel) entity.level()).withPermission(Vanilla.MinecraftServer_getRunPermissionLevel(entity.getServer()))
                         );
                     }
                 }))
@@ -1033,10 +1136,12 @@ public class CarpetEventServer
 
         public final CallbackList handler;
         public final boolean isPublic; // public events can be targetted with __on_<event> defs
+
         public Event(String name, int reqArgs, boolean isGlobalOnly)
         {
             this(name, reqArgs, isGlobalOnly, true);
         }
+
         public Event(String name, int reqArgs, boolean isGlobalOnly, boolean isPublic)
         {
             this.name = name;
@@ -1049,20 +1154,29 @@ public class CarpetEventServer
         {
             List<CarpetEventServer.Event> eventList = new ArrayList<>(CarpetEventServer.Event.byName.values());
             eventList.addAll(server.events.customEvents.values());
-            if (predicate == null) return eventList;
-            return eventList.stream().filter(predicate).collect(Collectors.toList());
+            if (predicate == null)
+            {
+                return eventList;
+            }
+            return eventList.stream().filter(predicate).toList();
         }
 
         public static Event getEvent(String name, CarpetScriptServer server)
         {
-            if (byName.containsKey(name)) return byName.get(name);
+            if (byName.containsKey(name))
+            {
+                return byName.get(name);
+            }
             return server.events.customEvents.get(name);
         }
 
         public static Event getOrCreateCustom(String name, CarpetScriptServer server)
         {
             Event event = getEvent(name, server);
-            if (event != null) return event;
+            if (event != null)
+            {
+                return event;
+            }
             return new Event(name, server);
         }
 
@@ -1099,61 +1213,149 @@ public class CarpetEventServer
         {
             return handler.callList.size() > 0;
         }
-        public boolean deprecated() {return false;}
-        //stubs for calls just to ease calls in vanilla code so they don't need to deal with scarpet value types
-        public void onTick() { }
-        public void onChunkEvent(ServerLevel world, ChunkPos chPos, boolean generated) { }
-        public void onPlayerEvent(ServerPlayer player) { }
-        public void onPlayerMessage(ServerPlayer player, String message) { }
-        public void onPlayerStatistic(ServerPlayer player, Stat<?> stat, int amount) { }
-        public void onMountControls(ServerPlayer player, float strafeSpeed, float forwardSpeed, boolean jumping, boolean sneaking) { }
-        public void onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack) { }
-        public void onBlockAction(ServerPlayer player, BlockPos blockpos, Direction facing) { }
-        public void onBlockHit(ServerPlayer player, InteractionHand enumhand, BlockHitResult hitRes) { }
-        public void onBlockBroken(ServerPlayer player, BlockPos pos, BlockState previousBS) { }
-        public void onBlockPlaced(ServerPlayer player, BlockPos pos, InteractionHand enumhand, ItemStack itemstack) { }
-        public void onEntityHandAction(ServerPlayer player, Entity entity, InteractionHand enumhand) { }
-        public void onHandAction(ServerPlayer player, InteractionHand enumhand) { }
-        public void onEntityAction(Entity entity, boolean created) { }
-        public void onDimensionChange(ServerPlayer player, Vec3 from, Vec3 to, ResourceKey<Level> fromDim, ResourceKey<Level> dimTo) {}
-        public void onDamage(Entity target, float amount, DamageSource source) { }
-        public void onRecipeSelected(ServerPlayer player, ResourceLocation recipe, boolean fullStack) {}
-        public void onSlotSwitch(ServerPlayer player, int from, int to) {}
-        public void onTrade(ServerPlayer player, Merchant merchant, MerchantOffer tradeOffer) {}
 
-        public void onExplosion(ServerLevel world, Entity e,  Supplier<LivingEntity> attacker, double x, double y, double z, float power, boolean createFire, List<BlockPos> affectedBlocks, List<Entity> affectedEntities, Explosion.BlockInteraction type) { }
-        public void onWorldEvent(ServerLevel world, BlockPos pos) { }
-        public void onWorldEventFlag(ServerLevel world, BlockPos pos, int flag) { }
-        public void onCarpetRuleChanges(CarpetRule<?> rule, CommandSourceStack source) { }
-        public void onCustomPlayerEvent(ServerPlayer player, Object ... args)
+        public boolean deprecated()
         {
-            if (handler.reqArgs != (args.length+1))
-                throw new InternalExpressionException("Expected "+handler.reqArgs+" arguments for "+name+", got "+(args.length+1));
+            return false;
+        }
+
+        //stubs for calls just to ease calls in vanilla code so they don't need to deal with scarpet value types
+        public void onTick(MinecraftServer server)
+        {
+        }
+
+        public void onChunkEvent(ServerLevel world, ChunkPos chPos, boolean generated)
+        {
+        }
+
+        public boolean onPlayerEvent(ServerPlayer player)
+        {
+            return false;
+        }
+
+        public boolean onPlayerMessage(ServerPlayer player, String message)
+        {
+            return false;
+        }
+
+        public void onPlayerStatistic(ServerPlayer player, Stat<?> stat, int amount)
+        {
+        }
+
+        public void onMountControls(ServerPlayer player, float strafeSpeed, float forwardSpeed, boolean jumping, boolean sneaking)
+        {
+        }
+
+        public boolean onItemAction(ServerPlayer player, InteractionHand enumhand, ItemStack itemstack)
+        {
+            return false;
+        }
+
+        public boolean onBlockAction(ServerPlayer player, BlockPos blockpos, Direction facing)
+        {
+            return false;
+        }
+
+        public boolean onBlockHit(ServerPlayer player, InteractionHand enumhand, BlockHitResult hitRes)
+        {
+            return false;
+        }
+
+        public boolean onBlockBroken(ServerPlayer player, BlockPos pos, BlockState previousBS)
+        {
+            return false;
+        }
+
+        public boolean onBlockPlaced(ServerPlayer player, BlockPos pos, InteractionHand enumhand, ItemStack itemstack)
+        {
+            return false;
+        }
+
+        public boolean onEntityHandAction(ServerPlayer player, Entity entity, InteractionHand enumhand)
+        {
+            return false;
+        }
+
+        public void onHandAction(ServerPlayer player, InteractionHand enumhand)
+        {
+        }
+
+        public void onEntityAction(Entity entity, boolean created)
+        {
+        }
+
+        public void onDimensionChange(ServerPlayer player, Vec3 from, Vec3 to, ResourceKey<Level> fromDim, ResourceKey<Level> dimTo)
+        {
+        }
+
+        public boolean onDamage(Entity target, float amount, DamageSource source)
+        {
+            return false;
+        }
+
+        public boolean onRecipeSelected(ServerPlayer player, ResourceLocation recipe, boolean fullStack)
+        {
+            return false;
+        }
+
+        public void onSlotSwitch(ServerPlayer player, int from, int to)
+        {
+        }
+
+        public void onTrade(ServerPlayer player, Merchant merchant, MerchantOffer tradeOffer)
+        {
+        }
+
+        public void onExplosion(ServerLevel world, Entity e, Supplier<LivingEntity> attacker, double x, double y, double z, float power, boolean createFire, List<BlockPos> affectedBlocks, List<Entity> affectedEntities, Explosion.BlockInteraction type)
+        {
+        }
+
+        public void onWorldEvent(ServerLevel world, BlockPos pos)
+        {
+        }
+
+        public void onWorldEventFlag(ServerLevel world, BlockPos pos, int flag)
+        {
+        }
+
+        public void handleAny(Object... args)
+        {
+        }
+
+        public void onCustomPlayerEvent(ServerPlayer player, Object... args)
+        {
+            if (handler.reqArgs != (args.length + 1))
+            {
+                throw new InternalExpressionException("Expected " + handler.reqArgs + " arguments for " + name + ", got " + (args.length + 1));
+            }
             handler.call(
                     () -> {
                         List<Value> valArgs = new ArrayList<>();
                         valArgs.add(EntityValue.of(player));
-                        for (Object o: args)
+                        for (Object o : args)
                         {
-                            valArgs.add(ValueConversions.guess(player.getLevel(), o));
+                            valArgs.add(ValueConversions.guess(player.serverLevel(), o));
                         }
                         return valArgs;
                     }, player::createCommandSourceStack
             );
         }
-        public void onCustomWorldEvent(ServerLevel world, Object ... args)
+
+        public void onCustomWorldEvent(ServerLevel world, Object... args)
         {
             if (handler.reqArgs != args.length)
-                throw new InternalExpressionException("Expected "+handler.reqArgs+" arguments for "+name+", got "+args.length);
+            {
+                throw new InternalExpressionException("Expected " + handler.reqArgs + " arguments for " + name + ", got " + args.length);
+            }
             handler.call(
                     () -> {
                         List<Value> valArgs = new ArrayList<>();
-                        for (Object o: args)
+                        for (Object o : args)
                         {
                             valArgs.add(ValueConversions.guess(world, o));
                         }
                         return valArgs;
-                    }, () -> CarpetServer.minecraft_server.createCommandSourceStack().withLevel(world)
+                    }, () -> world.getServer().createCommandSourceStack().withLevel(world)
             );
         }
     }
@@ -1167,11 +1369,13 @@ public class CarpetEventServer
 
     public void tick()
     {
-        if (!TickSpeed.process_entities)
+        if (Carpet.isTickProcessingPaused(scriptServer.server))
+        {
             return;
+        }
         Iterator<ScheduledCall> eventIterator = scheduledCalls.iterator();
         List<ScheduledCall> currentCalls = new ArrayList<>();
-        while(eventIterator.hasNext())
+        while (eventIterator.hasNext())
         {
             ScheduledCall call = eventIterator.next();
             call.dueTime--;
@@ -1181,12 +1385,13 @@ public class CarpetEventServer
                 eventIterator.remove();
             }
         }
-        for (ScheduledCall call: currentCalls)
+        for (ScheduledCall call : currentCalls)
         {
             call.execute();
         }
 
     }
+
     public void scheduleCall(CarpetContext context, FunctionValue function, List<Value> args, long due)
     {
         scheduledCalls.add(new ScheduledCall(context, function, args, due));
@@ -1195,34 +1400,50 @@ public class CarpetEventServer
     public void runScheduledCall(BlockPos origin, CommandSourceStack source, String hostname, CarpetScriptHost host, FunctionValue udf, List<Value> argv)
     {
         if (hostname != null && !scriptServer.modules.containsKey(hostname)) // well - scheduled call app got unloaded
+        {
             return;
+        }
         try
         {
             host.callUDF(origin, source, udf, argv);
         }
-        catch (NullPointerException | InvalidCallbackException | IntegrityException ignored) { }
+        catch (NullPointerException | InvalidCallbackException | IntegrityException ignored)
+        {
+        }
     }
 
     public CallbackResult runEventCall(CommandSourceStack sender, String hostname, String optionalTarget, FunctionValue udf, List<Value> argv)
     {
         CarpetScriptHost appHost = scriptServer.getAppHostByName(hostname);
         // no such app
-        if (appHost == null) return CallbackResult.FAIL;
+        if (appHost == null)
+        {
+            return CallbackResult.FAIL;
+        }
         // dummy call for player apps that reside on the global copy - do not run them, but report as passes.
-        if (appHost.isPerUser() && optionalTarget==null) return CallbackResult.PASS;
+        if (appHost.isPerUser() && optionalTarget == null)
+        {
+            return CallbackResult.PASS;
+        }
         ServerPlayer target = null;
         if (optionalTarget != null)
         {
             target = sender.getServer().getPlayerList().getPlayerByName(optionalTarget);
-            if (target == null) return CallbackResult.FAIL;
+            if (target == null)
+            {
+                return CallbackResult.FAIL;
+            }
         }
-        CommandSourceStack source = sender.withPermission(CarpetSettings.runPermissionLevel);
+        CommandSourceStack source = sender.withPermission(Vanilla.MinecraftServer_getRunPermissionLevel(sender.getServer()));
         CarpetScriptHost executingHost = appHost.retrieveForExecution(sender, target);
-        if (executingHost == null) return CallbackResult.FAIL;
+        if (executingHost == null)
+        {
+            return CallbackResult.FAIL;
+        }
         try
         {
-            executingHost.callUDF(source.withPermission(CarpetSettings.runPermissionLevel), udf, argv);
-            return CallbackResult.SUCCESS;
+            Value returnValue = executingHost.callUDF(source, udf, argv);
+            return returnValue instanceof StringValue && returnValue.getString().equals("cancel") ? CallbackResult.CANCEL : CallbackResult.SUCCESS;
         }
         catch (NullPointerException | InvalidCallbackException | IntegrityException error)
         {
@@ -1233,13 +1454,16 @@ public class CarpetEventServer
 
     public boolean addEventFromCommand(CommandSourceStack source, String event, String host, String funName)
     {
-        Event ev = Event.getEvent(event, CarpetServer.scriptServer);
+        Event ev = Event.getEvent(event, scriptServer);
         if (ev == null)
         {
             return false;
         }
-        boolean added = ev.handler.addFromExternal(source, host, funName, h -> onEventAddedToHost(ev, h));
-        if (added) Messenger.m(source, "gi Added " + funName + " to " + event);
+        boolean added = ev.handler.addFromExternal(source, host, funName, h -> onEventAddedToHost(ev, h), scriptServer);
+        if (added)
+        {
+            Carpet.Messenger_message(source, "gi Added " + funName + " to " + event);
+        }
         return added;
     }
 
@@ -1248,48 +1472,57 @@ public class CarpetEventServer
         // this is globals only
         Event ev = Event.byName.get(event);
         onEventAddedToHost(ev, host);
-        boolean success =  ev.handler.addEventCallInternal(host, function, args==null?NOARGS:args);
-        if (!success) throw new InternalExpressionException("Global event "+event+" requires "+ev.handler.reqArgs+", not "+(function.getNumParams()-((args==null)?0:args.size())));
+        boolean success = ev.handler.addEventCallInternal(host, function, args == null ? NOARGS : args);
+        if (!success)
+        {
+            throw new InternalExpressionException("Global event " + event + " requires " + ev.handler.reqArgs + ", not " + (function.getNumParams() - ((args == null) ? 0 : args.size())));
+        }
     }
 
     public boolean handleCustomEvent(String event, CarpetScriptHost host, FunctionValue function, List<Value> args)
     {
         Event ev = Event.getOrCreateCustom(event, scriptServer);
         onEventAddedToHost(ev, host);
-        return ev.handler.addEventCallInternal(host, function, args==null?NOARGS:args);
+        return ev.handler.addEventCallInternal(host, function, args == null ? NOARGS : args);
     }
 
-    public int signalEvent(String event, CarpetContext cc, ServerPlayer optionalTarget, List<Value> callArgs)
+    public int signalEvent(String event, CarpetContext cc, @Nullable ServerPlayer target, List<Value> callArgs)
     {
-        Event ev = Event.getEvent(event, ((CarpetScriptHost)cc.host).scriptServer());
-        if (ev == null) return -1;
-        return ev.handler.signal(cc.s, optionalTarget, callArgs);
+        Event ev = Event.getEvent(event, ((CarpetScriptHost) cc.host).scriptServer());
+        return ev == null ? -1 : ev.handler.signal(cc.source(), target, callArgs);
     }
 
     private void onEventAddedToHost(Event event, ScriptHost host)
     {
-        if (event.deprecated()) host.issueDeprecation(event.name+" event");
-        //return !(event.globalOnly && (host.perUser || host.parent != null));
+        if (event.deprecated())
+        {
+            host.issueDeprecation(event.name + " event");
+        }
+        event.handler.sortByPriority(this.scriptServer);
     }
 
     public boolean removeEventFromCommand(CommandSourceStack source, String event, String funName)
     {
-        Event ev = Event.getEvent(event, CarpetServer.scriptServer);
+        Event ev = Event.getEvent(event, scriptServer);
         if (ev == null)
         {
-            Messenger.m(source, "r Unknown event: " + event);
+            Carpet.Messenger_message(source, "r Unknown event: " + event);
             return false;
         }
         Callback.Signature call = Callback.fromString(funName);
         ev.handler.removeEventCall(call.host, call.target, call.function);
         // could verified if actually removed
-        Messenger.m(source, "gi Removed event: " + funName + " from "+event);
+        Carpet.Messenger_message(source, "gi Removed event: " + funName + " from " + event);
         return true;
     }
+
     public boolean removeBuiltInEvent(String event, CarpetScriptHost host)
     {
         Event ev = Event.getEvent(event, host.scriptServer());
-        if (ev == null) return false;
+        if (ev == null)
+        {
+            return false;
+        }
         ev.handler.removeAllCalls(host);
         return true;
     }
@@ -1297,7 +1530,10 @@ public class CarpetEventServer
     public void removeBuiltInEvent(String event, CarpetScriptHost host, String funName)
     {
         Event ev = Event.getEvent(event, host.scriptServer());
-        if (ev != null) ev.handler.removeEventCall(host.getName(), host.user, funName);
+        if (ev != null)
+        {
+            ev.handler.removeEventCall(host.getName(), host.user, funName);
+        }
     }
 
     public void removeAllHostEvents(CarpetScriptHost host)
@@ -1305,7 +1541,12 @@ public class CarpetEventServer
         // remove event handlers
         Event.removeAllHostEvents(host);
         if (host.isPerUser())
-            for (ScriptHost child: host.userHosts.values()) Event.removeAllHostEvents((CarpetScriptHost) child);
+        {
+            for (ScriptHost child : host.userHosts.values())
+            {
+                Event.removeAllHostEvents((CarpetScriptHost) child);
+            }
+        }
         // remove scheduled calls
         scheduledCalls.removeIf(sc -> sc.host != null && sc.host.equals(host.getName()));
     }
